syntax = "proto3";

option csharp_namespace = "TeamworkSystem.Content.Application.Grpc.Definitions";

service RecentRequestsService {
  rpc GetRecentProjects(GetRecentProjectsRequest) returns (GetRecentProjectsResponse);
  rpc GetRecentTeams(GetRecentTeamsRequest) returns (GetRecentTeamsResponse);
  rpc GetRecentTickets(GetRecentTicketsRequest) returns (GetRecentTicketsResponse);
}

message GetRecentProjectsRequest {
  repeated string ids = 1;
}

message GetRecentProjectResponse {
  string id = 1;
  string teamId = 2;
  string title = 3;
  optional string type = 4;
  optional string url = 5;
  optional string description = 6;
}

message GetRecentProjectsResponse {
  repeated GetRecentProjectResponse projects = 1;
}

message GetRecentTeamsRequest {
  repeated string ids = 1;
}

message GetRecentTeamResponse {
  string id = 1;
  optional string leaderId = 2;
  string name = 3;
  optional string specialization = 4;
  optional string about = 5;
  optional string avatar = 6;
}

message GetRecentTeamsResponse {
  repeated GetRecentTeamResponse teams = 1;
}

message GetRecentTicketsRequest {
  repeated string ids = 1;
}

message GetRecentTicketResponse {
  string id = 1;
  string projectId = 2;
  optional string executorId = 3;
  string title = 4;
  string status = 7;
}

message GetRecentTicketsResponse {
  repeated GetRecentTicketResponse tickets = 1;
}
